--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
 <body>
   <div class="wrap">
     <header>
-      <div class="logo"><h1>From the Front</h1></div>
+      <div class="logo"><h1>From<br>The<br>Front</h1></div>
       <div>
-        <h2>Love Letters — Notes</h2>
-        <div style="color:#6b5650">Sorted and preserved. Click a note to read.</div>
+        <h2>Love Letters</h2>
+        <div style="color:#6b5650">Click a letter to read.</div>
       </div>
     </header>
 
@@ -67,8 +67,6 @@
         </div>
       </main>
     </div>
-
-    <footer>Notes stored locally; to add notes, update <code>notes/list.json</code> with filenames.</footer>
   </div>
 
   <script>
