Fix grammatical errors in HTML note

--- a/notes/21-12-25_2100.html
+++ b/notes/21-12-25_2100.html
@@ -8,6 +8,6 @@ I will dream of your face tonight, as you are the strength who gets me through.
 
 Never forget that you are amazing and soon I will come back to you.
 
-We can check dance our hearts out at we celebrate my return. I count down the hours ❤️.
+We can dance our hearts out as we celebrate my return. I'm counting down the hours ❤️
 
 Regards, Mr Momo</div>
