--- a/notes/24-12-25_2100.html
+++ b/notes/24-12-25_2100.html
@@ -1,1 +1,13 @@
+<h1>A restful night</h1>
+<div class="meta">before Christmas</div>
+<div class="content">To nice Momo,
 
+Twas the night before Christmas 
+
+And all through the land, I was tossing and turning before I didn't have my Momo 
+
+But as I laid my head on a pillow, I knew she was too (not the same one tho 😔)
+
+And my pillow surrounded me, knowing she was almost upon me
+
+Regards, Christian Andersen (aka Chootie)</div>
